--- a/src/app/core/layout-admin/layout-admin.component.html
+++ b/src/app/core/layout-admin/layout-admin.component.html
@@ -13,7 +13,28 @@
     <nav class="sidebar-nav">
       <ul class="nav">
         <li class="nav-item">
-          <a class="nav-link" routerLinkActive="active" [routerLink]="['/dashboard']"><i class="icon-speedometer"></i> Dashboard <span class="badge badge-info">NEW</span></a>
+          <a class="nav-link" routerLinkActive="active" [routerLink]="['/dashboard']">
+            <i class="icon-speedometer"></i> Dashboard <span class="badge badge-info">NEW</span>
+          </a>
+        </li>
+        <li class="divider"></li>
+        <li class="nav-title">
+          Offer Management
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLinkActive="active" [routerLink]="['/offersetups']">
+            <i class="icon-puzzle"></i> Setups
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLinkActive="active" [routerLink]="['/offertemplates']">
+            <i class="icon-puzzle"></i> Templates
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLinkActive="active" [routerLink]="['/offerteasers']">
+            <i class="icon-puzzle"></i> Teaser
+          </a>
         </li>
       </ul>
     </nav>
@@ -35,8 +56,8 @@
 </div>
 
 <footer class="app-footer">
-  <p>footer left</p>
-  <p class="float-right">footer right</p>
+  footer left
+  <span class="float-right">footer right</span>
   <!--<a href="https://genesisui.com">SimpliQ</a> &copy; 2017 creativeLabs.-->
   <!--<span class="float-right">Powered by <a href="https://genesisui.com">GenesisUI</a>-->
     <!--</span>-->
