--- a/src/app/offersetups/offersetup-form/offersetup-form.component.html
+++ b/src/app/offersetups/offersetup-form/offersetup-form.component.html
@@ -1,3 +1,29 @@
-<p>
-  offersetup-form works!
-</p>
+<form class="formly" role="form" novalidate [formGroup]="form" (ngSubmit)="submit(user)">
+
+  <formly-form [model]="user" [fields]="userFields">
+    <button type="submit" class="btn btn-default">Button</button>
+  </formly-form>
+
+</form>
+
+<div class="container">
+  <div class="row">
+    <div class="col">
+      1 of 2
+    </div>
+    <div class="col">
+      1 of 2
+    </div>
+  </div>
+  <div class="row">
+    <div class="col">
+      1 of 3
+    </div>
+    <div class="col">
+      1 of 3
+    </div>
+    <div class="col">
+      1 of 3
+    </div>
+  </div>
+</div>
