--- a/src/app/offersetups/offersetup-form/offersetup-form.component.html
+++ b/src/app/offersetups/offersetup-form/offersetup-form.component.html
@@ -1,29 +1,16 @@
-<form class="formly" role="form" novalidate [formGroup]="form" (ngSubmit)="submit(user)">
+<!--<form class="formly" role="form" novalidate [formGroup]="form" (ngSubmit)="submit(user)">-->
 
-  <formly-form [model]="user" [fields]="userFields">
-    <button type="submit" class="btn btn-default">Button</button>
+  <!--<formly-form [model]="user" [fields]="userFields">-->
+    <!--<button type="submit" class="btn btn-default">Button</button>-->
+  <!--</formly-form>-->
+
+<!--</form>-->
+
+<form class="formly" novalidate [formGroup]="offersetupForm" (ngSubmit)="submit(offersetup)">
+
+  <formly-form [model]="offersetup" [fields]="offersetupFields">
+    <button type="submit" [disabled]="offersetupForm.invalid" class="btn btn-default">Button</button>
   </formly-form>
 
 </form>
 
-<div class="container">
-  <div class="row">
-    <div class="col">
-      1 of 2
-    </div>
-    <div class="col">
-      1 of 2
-    </div>
-  </div>
-  <div class="row">
-    <div class="col">
-      1 of 3
-    </div>
-    <div class="col">
-      1 of 3
-    </div>
-    <div class="col">
-      1 of 3
-    </div>
-  </div>
-</div>
