fix list off errors of lint

--- a/src/app/core/layout-admin/layout-admin.component.html
+++ b/src/app/core/layout-admin/layout-admin.component.html
@@ -1,9 +1,9 @@
 <header class="app-header navbar">
-  <button class="navbar-toggler mobile-sidebar-toggler hidden-lg-up" type="button">&#9776;</button>
+  <button toxMobileSidebarToggler class="navbar-toggler hidden-lg-up" type="button">&#9776;</button>
   <a class="navbar-brand" href="#"></a>
   <ul class="nav navbar-nav hidden-md-down">
     <li class="nav-item">
-      <a class="nav-link navbar-toggler sidebar-toggler" href="#">&#9776;</a>
+      <a toxSidebarToggler class="nav-link navbar-toggler" href="#">&#9776;</a>
     </li>
   </ul>
 </header>
