add pipe (not in use) and append list

--- a/src/app/core/layout-admin/layout-admin.component.html
+++ b/src/app/core/layout-admin/layout-admin.component.html
@@ -14,7 +14,7 @@
       <ul class="nav">
         <li class="nav-item">
           <a class="nav-link" routerLinkActive="active" [routerLink]="['/dashboard']">
-            <i class="icon-speedometer"></i> Dashboard <span class="badge badge-info">NEW</span>
+            <i class="icon-speedometer"></i> Dashboard <span class="badge badge-success">NEW</span>
           </a>
         </li>
         <li class="divider"></li>
@@ -23,17 +23,17 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLinkActive="active" [routerLink]="['/offersetups']">
-            <i class="icon-puzzle"></i> Setups
+            <i class="icon-puzzle"></i> Setups <span class="badge badge-success">NEW</span>
           </a>
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLinkActive="active" [routerLink]="['/offertemplates']">
-            <i class="icon-puzzle"></i> Templates
+            <i class="icon-puzzle"></i> Templates <span class="badge badge-info">SOON</span>
           </a>
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLinkActive="active" [routerLink]="['/offerteasers']">
-            <i class="icon-puzzle"></i> Teaser
+            <i class="icon-puzzle"></i> Teaser <span class="badge badge-info">SOON</span>
           </a>
         </li>
       </ul>
