add logo and primary color

--- a/src/scss/_bootstrap-variables.scss
+++ b/src/scss/_bootstrap-variables.scss
@@ -10,8 +10,8 @@ $gray-light:                #c7cbd5;
 $gray-lighter:              #e4e6eb;
 $gray-lightest:             #f0f2f7;
 
-$brand-primary:             #36a9e1;
-$brand-success:             #bdea74;
+$brand-primary:             #0099cc;
+$brand-success:             #9dea59;
 $brand-info:                #67c2ef;
 $brand-warning:             #fabb3d;
 $brand-danger:              #ff5454;
