add simple line icons

--- a/src/app/core/layout-admin/layout-admin.component.html
+++ b/src/app/core/layout-admin/layout-admin.component.html
@@ -23,7 +23,7 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLinkActive="active" [routerLink]="['/offersetups']">
-            <i class="icon-puzzle"></i> Setups <span class="badge badge-success">NEW</span>
+            <i class="icon-settings"></i> Setups <span class="badge badge-success">NEW</span>
           </a>
         </li>
         <li class="nav-item">
@@ -33,7 +33,7 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLinkActive="active" [routerLink]="['/offerteasers']">
-            <i class="icon-puzzle"></i> Teaser <span class="badge badge-info">SOON</span>
+            <i class="icon-present"></i> Teaser <span class="badge badge-info">SOON</span>
           </a>
         </li>
       </ul>
