add pure admin-layout (most components missing ... only dummies)

--- a/src/scss/bootstrap_overwrite/_variables.scss
+++ b/src/scss/bootstrap_overwrite/_variables.scss
@@ -159,7 +159,7 @@ $sizes: (
 //
 // Settings for the `<body>` element.
 
-$body-bg:       $white !default;
+$body-bg:       $gray-100; //$white !default;
 $body-color:    $gray-900 !default;
 
 // Links
