--- a/src/app/shared/layouts/admin/admin.component.html
+++ b/src/app/shared/layouts/admin/admin.component.html
@@ -2,18 +2,13 @@
   <tox-headerbar></tox-headerbar>
   <tox-sidebar></tox-sidebar>
 
-
   <div class="mb">
     <div class="container">
-      <p>main-bar ".mb > .container" in abhängigkeit von breite+sidebarvisible</p>
-
       <router-outlet></router-outlet>
     </div>
+  </div>
 
-  </div>
-  <div class="fb">
-    footer-bar
-  </div>
+  <tox-footerbar></tox-footerbar>
 </div>
 
 
