restructure - now shared and lazy shared module

--- a/src/app/plong/plong.component.html
+++ b/src/app/plong/plong.component.html
@@ -6,7 +6,7 @@
 <p>translate: {{ 'teststring' | translate }} - {{ 'common.hello' | translate }} </p>
 
 <p>ng-bootstrap example </p>
-<ngb-alert [type]="'warning'">{{ 'common.hello' | translate }}</ngb-alert>
+<!--<ngb-alert [type]="'warning'">{{ 'common.hello' | translate }}</ngb-alert>-->
 
 <hr>
 <hr>
